--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="mail">
   <div class="icon"><p>あなたへ</p></div>
   <div class="main">
-   <p>写真をはじめて４年</p>
+   <p>写真をはじめて５年</p>
 
    
    <p>気づいたこと</p>
@@ -23,8 +23,7 @@
 <p>その気持ちの移り変わりの瞬間をそばで撮影していく
 </p>
 
-<p>友達も家族も恋人も、
-</p>
+
 <p>二度と戻らない刹那をいつまでも残しておきたい
 </p>
 <p>これを愛と言わずしてなんと言うんだろう
@@ -34,9 +33,7 @@
 </p>
 <p>写真を撮り始めて、仕事をするようになって気づいたこと
 </p>
-<p>愛してるってこと
-</p>
-<p>友達も家族も恋人も
+<p>愛してるってことと
 </p>
 
 <p>ありがとうを伝えたい
